force-app/main/default/objects/RCI_Only__c/fields/Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>