force-app/main/default/objects/RCI_Only__c/fields/Additional_Threat_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Threat_Notes__c</fullName>
    <label>Additional Threat Notes</label>
    <type>TextArea</type>
</CustomField>