force-app/main/default/objects/RCI_Only__c/fields/DateofSeparation__c.field-meta.xml
<CustomField>
    <fullName>DateofSeparation__c</fullName>
    <label>Date of Separation</label>
    <type>Date</type>
</CustomField>