force-app/main/default/objects/RCI_Only__c/fields/EmployeeStillEmployed__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStillEmployed__c</fullName>
    <label>Employee Still Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>