force-app/main/default/objects/RCI_Only__c/fields/Employer_Has_Additional_Claims__c.field-meta.xml
<CustomField>
    <fullName>Employer_Has_Additional_Claims__c</fullName>
    <label>Employer Has Additional Claims?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>