force-app/main/default/objects/RCI_Only__c/fields/Has_Claimant_Filed_Wage_Claim__c.field-meta.xml
<CustomField>
    <fullName>Has_Claimant_Filed_Wage_Claim__c</fullName>
    <label>Has Claimant Filed Wage Claim?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>