force-app/main/default/objects/RCI_Only__c/fields/LC_Speak_with_Investigator_at_Worksite__c.field-meta.xml
<CustomField>
    <fullName>LC_Speak_with_Investigator_at_Worksite__c</fullName>
    <label>LC Speak with Investigator at Worksite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>