force-app/main/default/objects/RCI_Only__c/fields/LC_Wage_Claim_Against_Employer_Location__c.field-meta.xml
<CustomField>
    <fullName>LC_Wage_Claim_Against_Employer_Location__c</fullName>
    <label>LC Wage Claim Against Employer Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>