force-app/main/default/objects/RCI_Only__c/fields/Next_Scheduled_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Meeting__c</fullName>
    <label>Next Scheduled Meeting</label>
    <type>Date</type>
</CustomField>