force-app/main/default/objects/RCI_Only__c/fields/Other_Adverse_Action_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Adverse_Action_Explanation__c</fullName>
    <label>Other Adverse Action Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>