force-app/main/default/objects/RCI_Only__c/fields/RCI_Name__c.field-meta.xml
<CustomField>
    <fullName>RCI_Name__c</fullName>
    <inlineHelpText>Person filling out ITF</inlineHelpText>
    <label>RCI Name</label>
    <type>TextArea</type>
</CustomField>