force-app/main/default/objects/RCI_Only__c/fields/Reason_For_Threat_Explained__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Threat_Explained__c</fullName>
    <label>Reason For Threat Explained</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>