force-app/main/default/objects/RCI_Only__c/fields/ReportingInvestigator__c.field-meta.xml
<CustomField>
    <fullName>ReportingInvestigator__c</fullName>
    <label>Reporting Investigator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>