force-app/main/default/objects/RCI_Only__c/fields/Retaliation_Complaint_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Complaint_Additional_Notes__c</fullName>
    <label>Retaliation Complaint Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>