force-app/main/default/objects/RCI_Only__c/fields/Retaliation_Complaint_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Complaint_Authorized__c</fullName>
    <label>Retaliation Complaint Authorized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>