force-app/main/default/objects/RCI_Only__c/fields/Retaliation_Complaint_Method__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Complaint_Method__c</fullName>
    <label>Retaliation Complaint Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person authorization</fullName>
            </value>
            <value>
                <fullName>Phone authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>