force-app/main/default/objects/RCI_Only__c/fields/Threat_at_LC_Office__c.field-meta.xml
<CustomField>
    <fullName>Threat_at_LC_Office__c</fullName>
    <label>Threat at LC Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>During hearing</fullName>
            </value>
            <value>
                <fullName>During settlement conf</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>