force-app/main/default/objects/RCI_Only__c/fields/Threat_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Threat_Date_2__c</fullName>
    <label>Threat Date 2</label>
    <type>DateTime</type>
</CustomField>