force-app/main/default/objects/RCI_Only__c/fields/Threat_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Threat_Date_3__c</fullName>
    <label>Threat Date 3</label>
    <type>DateTime</type>
</CustomField>