force-app/main/default/objects/RCI_Only__c/fields/Threat_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Threat_Date_4__c</fullName>
    <label>Threat Date 4</label>
    <type>DateTime</type>
</CustomField>