force-app/main/default/objects/RCI_Only__c/fields/Threat_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Threat_Date_Time__c</fullName>
    <label>Threat Date/Time</label>
    <type>DateTime</type>
</CustomField>