force-app/main/default/objects/RCI_Only__c/fields/Threat_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Threat_Documentation__c</fullName>
    <label>Threat Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone recording</fullName>
            </value>
            <value>
                <fullName>Call log</fullName>
            </value>
            <value>
                <fullName>Text copy</fullName>
            </value>
            <value>
                <fullName>Email copy</fullName>
            </value>
            <value>
                <fullName>Letter copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>