force-app/main/default/objects/RCI_Only__c/fields/Threat_Location__c.field-meta.xml
<CustomField>
    <fullName>Threat_Location__c</fullName>
    <label>Threat Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Labor Commissioner&#39;s Office</fullName>
            </value>
            <value>
                <fullName>At the workplace</fullName>
            </value>
            <value>
                <fullName>Other: new workplace, home, etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>