force-app/main/default/objects/RCI_Only__c/fields/Threat_Location_continued__c.field-meta.xml
<CustomField>
    <fullName>Threat_Location_continued__c</fullName>
    <label>Threat Location continued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>During Hearing</fullName>
            </value>
            <value>
                <fullName>During Settlement Conference</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>