force-app/main/default/objects/RCI_Only__c/fields/Threat_Location_Other__c.field-meta.xml
<CustomField>
    <fullName>Threat_Location_Other__c</fullName>
    <label>Threat Location Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>