force-app/main/default/objects/RCI_Only__c/fields/Threat_Next_Scheduled_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Threat_Next_Scheduled_Meeting__c</fullName>
    <label>Threat Next Scheduled Meeting</label>
    <type>Date</type>
</CustomField>