force-app/main/default/objects/RCI_Only__c/fields/Threat_Next_Scheduled_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>Threat_Next_Scheduled_Proceeding__c</fullName>
    <label>Threat Next Scheduled Proceeding</label>
    <type>TextArea</type>
</CustomField>