force-app/main/default/objects/RCI_Only__c/fields/Threat_Reason__c.field-meta.xml
<CustomField>
    <fullName>Threat_Reason__c</fullName>
    <label>Threat Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>