force-app/main/default/objects/RCI_Only__c/fields/Threat_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Threat_Recipient_Name__c</fullName>
    <label>Threat Recipient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>