force-app/main/default/objects/RCI_Only__c/fields/Threat_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Threat_Recipient_Type__c</fullName>
    <label>Threat Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worker</fullName>
            </value>
            <value>
                <fullName>LC Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>