force-app/main/default/objects/RCI_Only__c/fields/Threat_Reported__c.field-meta.xml
<CustomField>
    <fullName>Threat_Reported__c</fullName>
    <label>Threat Reported</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>