force-app/main/default/objects/RCI_Only__c/fields/Threat_Result__c.field-meta.xml
<CustomField>
    <fullName>Threat_Result__c</fullName>
    <label>Threat Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worker withdrew claim</fullName>
            </value>
            <value>
                <fullName>Worker decided not to testify</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>