force-app/main/default/objects/RCI_Only__c/fields/Threat_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Threat_Source_Name__c</fullName>
    <label>Threat Source Name</label>
    <type>TextArea</type>
</CustomField>