force-app/main/default/objects/RCI_Only__c/fields/Threat_Source_Relationship_with_Employer__c.field-meta.xml
<CustomField>
    <fullName>Threat_Source_Relationship_with_Employer__c</fullName>
    <label>Threat Source Relationship with Employer</label>
    <type>TextArea</type>
</CustomField>