force-app/main/default/objects/RCI_Only__c/fields/Threat_Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Threat_Target_Name__c</fullName>
    <label>Threat Target Name</label>
    <type>TextArea</type>
</CustomField>