force-app/main/default/objects/RCI_Only__c/fields/VIP_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>VIP_Form_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VIP Form Template</label>
    <referenceTo>VIPForm__VIP_Template__c</referenceTo>
    <relationshipLabel>RCI Only</relationshipLabel>
    <relationshipName>RCI_Only</relationshipName>
    <type>Lookup</type>
</CustomField>