force-app/main/default/objects/RCI_Only__c/fields/Were_Others_Also_Threatened__c.field-meta.xml
<CustomField>
    <fullName>Were_Others_Also_Threatened__c</fullName>
    <label>Were Others Also Threatened</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>