force-app/main/default/objects/RCI_Only__c/fields/What_Happened_After_Threat__c.field-meta.xml
<CustomField>
    <fullName>What_Happened_After_Threat__c</fullName>
    <label>What Happened After Threat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worker withdrew claim</fullName>
            </value>
            <value>
                <fullName>Worker decided not to testify</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>