force-app/main/default/objects/RCI_Only__c/fields/What_Happened_After_Threat_Other__c.field-meta.xml
<CustomField>
    <fullName>What_Happened_After_Threat_Other__c</fullName>
    <label>What Happened After Threat Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>