force-app/main/default/objects/RCI_Only__c/recordTypes/Immigration_Threat.recordType-meta.xml
<RecordType>
    <fullName>Immigration_Threat</fullName>
    <active>true</active>
    <label>Immigration Threat</label>
</RecordType>